After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643167 - Close (ctrl + w) - > gnome-dictionary crashs.
Close (ctrl + w) - > gnome-dictionary crashs.
Status: RESOLVED FIXED
Product: gnome-utils
Classification: Deprecated
Component: gdict
2.91.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-utils Maintainers
gnome-utils Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-24 07:56 UTC by sangu
Modified: 2011-04-08 08:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdict: Be more resilient when loading/saving state (2.22 KB, patch)
2011-04-08 08:17 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description sangu 2011-02-24 07:56:51 UTC
Close (ctrl + w) - > gnome-dictionary crashs.
1. Launch gnome-dictionary
2. Close (ctrl+w) gnome-dictionary

gnome-utils-2.91.90-1.fc15.x86_64
glib2-2.28.1-1.fc15.x86_64
gtk3-3.0.1-1.fc15.x86_64

$ gdb gnome-dictionary

(gdb) r
Starting program: /usr/bin/gnome-dictionary 
[Thread debugging using libthread_db enabled]

** (gnome-dictionary:5981): WARNING **: AT-SPI: Accessibility bus not found - Using session bus.

[New Thread 0x7fffeadbf700 (LWP 5984)]
[New Thread 0x7fffea3b6700 (LWP 5985)]

** (gnome-dictionary:5981): WARNING **: Unable to load the window state file: No such file or directory
**
ERROR:gdict-sidebar.c:540:gdict_sidebar_current_page: assertion failed: (page != NULL)

Program received signal SIGABRT, Aborted.
0x00007ffff4625285 in raise (sig=6)
    at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
64	  return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig);

(gdb) bt
  • #0 raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 64
  • #1 abort
    at abort.c line 92
  • #2 g_assertion_message
  • #3 g_assertion_message_expr
    at gtestutils.c line 1369
  • #4 gdict_sidebar_current_page
    at gdict-sidebar.c line 540
  • #5 gdict_window_store_state
    at gdict-window.c line 810
  • #6 gdict_window_cmd_file_close_window
    at gdict-window.c line 1030
  • #7 g_closure_invoke
    at gclosure.c line 767
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3252
  • #9 g_signal_emit_valist
    at gsignal.c line 2983
  • #10 g_signal_emit
    at gsignal.c line 3040
  • #11 _gtk_action_emit_activate
    at gtkaction.c line 799
  • #12 g_closure_invoke
    at gclosure.c line 767
  • #13 signal_emit_unlocked_R
    at gsignal.c line 3182
  • #14 g_signal_emit_valist
    at gsignal.c line 2983
  • #15 g_signal_emit
    at gsignal.c line 3040
  • #16 gtk_widget_activate
    at gtkwidget.c line 6097
  • #17 gtk_menu_shell_activate_item
    at gtkmenushell.c line 1403
  • #18 gtk_menu_shell_button_release
    at gtkmenushell.c line 803
  • #19 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 85
  • #20 g_closure_invoke
    at gclosure.c line 767
  • #21 signal_emit_unlocked_R
    at gsignal.c line 3290
  • #22 g_signal_emit_valist
    at gsignal.c line 2993
  • #23 g_signal_emit
    at gsignal.c line 3040
  • #24 gtk_widget_event_internal
    at gtkwidget.c line 6066
  • #25 gtk_propagate_event
    at gtkmain.c line 2588
  • #26 gtk_main_do_event
    at gtkmain.c line 1863
  • #27 gdk_event_source_dispatch
  • #28 g_main_dispatch
    at gmain.c line 2440
  • #29 g_main_context_dispatch
    at gmain.c line 3013
  • #30 g_main_context_iterate
    at gmain.c line 3091
  • #31 g_main_loop_run
    at gmain.c line 3299
  • #32 gtk_main
    at gtkmain.c line 1349
  • #33 g_application_run
    at gapplication.c line 1242
  • #34 main
    at main.c line 17

Comment 1 sangu 2011-04-08 04:56:03 UTC
This issue still happens in 3.0.0.
Comment 2 Emmanuele Bassi (:ebassi) 2011-04-08 08:17:28 UTC
Created attachment 185497 [details] [review]
gdict: Be more resilient when loading/saving state

Provide a fallback code path in case we failed to load the window state
keyfile, to avoid a segmentation fault.
Comment 3 Emmanuele Bassi (:ebassi) 2011-04-08 08:18:10 UTC
Attachment 185497 [details] pushed as 057bdd8 - gdict: Be more resilient when loading/saving state