gdict: Be more resilient when loading/saving state

Provide a fallback code path in case we failed to load the window state
keyfile, to avoid a segmentation fault.

https://bugzilla.gnome.org/show_bug.cgi?id=643167